# moa-llm

./: .env.local.template  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yaml
examples/: simple_example.py
examples/openai_compatible_server/: .env.local.template  README.md  moa_config.yaml  moa_config_chat.yaml  server.py
examples/openai_compatible_server/outputs/: 2024_09_10_moa_11fe2790-50e1-436f-8b05-fe789f64e80e.jsonl
examples/streamlit_chat/: README.md  streamlit_chat.py  streamlit_chat_local_server.py
moa_llm/: __init__.py  aggregation_layer.py  config_loader.py  layer.py  mixture_of_agents.py  neuron.py  user_query_annotator.py
